modules/gdscript/tests/scripts/parser/errors/lambda_without_colon.gd
#           No colon --v
var f = func () -> void
	pass
